# synth-tab-gen

./: LICENSE  README.md
synth-tab-gen-backend/: .dockerignore  Dockerfile  pyproject.toml
synth-tab-gen-backend/synth_tab_gen_backend/: api.py  main.py  models.py  storage.py  utils.py
synth-tab-gen-backend/synth_tab_gen_backend/routers/: datasets.py  jobs.py  models.py
synth-tab-gen-frontend/: pyproject.toml
synth-tab-gen-frontend/synth_tab_gen_frontend/: app.py  main.py
