[project]
name = "synth-tab-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.4",
    "python-multipart>=0.0.20",
    "sdv>=1.20.1",
    "torch>=2.7.0",
    "uvicorn>=0.34.2",
]
